# Hondana

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  _preflight.py  _preflight.sh  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/linters/: .isort.cfg  .python-black
.github/workflows/: analysis.yml  build.yaml  coverage.yaml  coverage_and_lint.yaml  lint.yaml
docs/: api.rst  conf.py  exceptions.rst  index.rst  logging.rst  types.rst
docs/_static/js/: custom.js
docs/_static/styles/: furo.css
docs/extensions/: attributetable.py  prettyversion.py  resource_links.py
examples/: create_manga.py  download_manga.py  my_feed.py  search_manga.py  submitting_a_report.py  updating_local_tags.py  upload_a_chapter.py  use_logging.py  using_dev_api.py  using_query_params.py  using_refresh_token.py
hondana/: __init__.py  __main__.py  artist.py  author.py  chapter.py  client.py  collections.py  cover.py  custom_list.py  enums.py  errors.py  forums.py  http.py  includes.py  legacy.py  manga.py  oauth2.py  query.py  relationship.py  report.py  scanlator_group.py  tags.py  token.py  user.py  utils.py
hondana/extras/: report_reasons.json  tags.json
hondana/types/: __init__.py  account.py  artist.py  auth.py  author.py  chapter.py  common.py  cover.py  custom_list.py  errors.py  legacy.py  manga.py  query.py  relationship.py  report.py  scanlator_group.py  settings.py  statistics.py  tags.py  upload.py  user.py
hondana/types_/: account.py  artist.py  auth.py  author.py  chapter.py  common.py  cover.py  custom_list.py  errors.py  forums.py  legacy.py  manga.py  relationship.py  report.py  scanlator_group.py  settings.py  statistics.py  tags.py  token.py  upload.py  user.py
mangadex/: __init__.py  __main__.py  artist.py  author.py  chapter.py  client.py  cover.py  errors.py  http.py  manga.py  tags.py  utils.py
mangadex/examples/: my_feed.py  search_manga.py
mangadex/extras/: tags.json
mangadex/types/: __init__.py  artist.py  auth.py  author.py  chapter.py  common.py  cover.py  manga.py  payloads.py  query.py  relationship.py  shared.py  tags.py
tests/: README.md  test_artist.py  test_author.py  test_chapter.py  test_client.py  test_collection.py  test_cover.py  test_custom_list.py  test_legacy.py  test_manga.py  test_query.py  test_scanlator_group.py  test_tags.py  test_user.py  test_utils.py
tests/payloads/: artist.json  author.json  chapter.json  cover.json  custom_list.json  legacy_mapping.json  manga.json  manga_ratings.json  manga_relation.json  manga_relations.json  manga_statistics.json  scanlator_group.json  user.json
tests/payloads/collections/: author.json  authors.json  chapter_feed.json  cover.json  covers.json  custom_list.json  custom_lists.json  legacy_mapping.json  manga.json  manga_relation.json  scanlator_group.json  scanlator_groups.json  user.json  users.json
