[project]
name = "Hondana"
version = "3.6.0"
description = "An asynchronous wrapper around the MangaDex v5 API"
authors = [{ name = "Alex Nørgaard", email = "umbra@abstractumbra.dev" }]
dependencies = [
    "aiohttp<4.0,>=3.9",
    "aiohttp[speedups]<4.0,>=3.9; extra == \"speed\"",
    "orjson; extra == \"speed\"",
]
requires-python = "<4.0,>=3.11"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["mangadex", "manga", "api", "wrapper"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Typing :: Typed",
]

[project.urls]
"Issue Tracker" = "https://github.com/AbstractUmbra/hondana/issues"
Discord = "https://discord.gg/aYGYJxwqe5"
repository = "https://github.com/AbstractUmbra/hondana"

[project.optional-dependencies]
speed = ["orjson", "aiohttp[speedups]"]

[project.scripts]
version = "hondana.__main__:show_version"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["ruff", "typing-extensions"]
docs = ["sphinx", "sphinxcontrib-trio", "furo"]
tests = ["pytest", "pytest-asyncio"]

[tool.pdm.build]
includes = [
    "hondana",
    "hondana/**/*.py",
    "hondana/py.typed",
    "hondana/extras/tags.json",
    "hondana/extras/report_reasons.json",
    "LICENSE",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 125
target-version = "py311"
exclude = ["docs/"]

[tool.ruff.lint]
preview = true
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DOC",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    "FA",
    "FBT",
    "FURB",
    "G",
    "I",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PTH",
    "PYI",
    "Q",
    "Q003",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = [
    "ANN401",
    "DOC501",  # these currently don't work with sphinx
    "DOC502",  # these currently don't work with sphinx
    "F401",
    "F402",
    "F403",
    "F405",
    "PD011",   # this is not a numpy codebase
    "PERF203",
    "PLC0414", # pyright ruling for `as` imports needed
    "Q000",
    "RUF001",
    "RUF009",
    "SIM105",
    "TRY003",  # over-eager rule
    "TRY301",  # unrealistic rule
    "UP034",
    "UP038",
]
unfixable = [
    "E501", # line length handled in other ways by ruff format
    "ERA",  # Don't delete commented out code
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # we use `assert` in tests
    "EM101",  # testing exceptions are okay I feel
    "INP001", # we don't import tests generally
]
"hondana/types_/*" = [
    "INP001", # we don't use the types namespace as a package
]
"examples/*" = [
    "INP001", # this is the examples directory
    "T201",   # we showcase examples using print
    "S106",   # no secure values are used
    "RET504", # this is done for commenting purposes
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# https://discuss.python.org/t/problems-with-typeis/55410/6
# https://discuss.python.org/t/problems-with-typeis/55410/46
# Until what can go into a TypeIs/TypeGuard changes, these are just dangerous.
"typing.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing.TypeGuard".msg = "TypeGuard is fundamentally unsafe"
"typing_extensions.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing_extensions.TypeGuard".msg = "TypeGuard is fundamentally unsafe"

[tool.pyright]
exclude = [
    "**/__pycache__",
    "docs/**/*.py",
    "tests/_update_payloads.py",
    "./_preflight.py",
]
include = ["hondana", "tests", "examples"]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
reportImportCycles = false
pythonVersion = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.pdm.scripts]
spec = "python _api_dl.py"
check = "ruff check ."
format = "ruff format --check"
pyright = "pyright"
_types = "pyright --ignoreexternal --verifytypes hondana"
types = { composite = ["pyright", "_types"] }
tests = "pytest"
docs = "sphinx-build -aEWT --keep-going docs/ docs/build" # TODO: add -n when sphinx is fixed
tags = { call = "_preflight:__update_tags" }
report_reasons = { call = "_preflight:__update_report_reasons" }
pre = { composite = [
    "check",
    "format",
    "types",
    "tests",
    "docs",
    "tags",
    "report_reasons",
] }
